# Lite3_MotionSDK

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_ZH.md  install.sh  main.cpp  motionexample.h
Lite3_URDF/urdf/: Lite3.urdf  Lite3_isaac.urdf
client/: CMakeLists.txt  install.sh
client/src/: client.cpp  main.cpp
include/: dr_timer.h  grpc_client.h  lite3_types.h  motion_spline.h  motionexample.h  receiver.h  sender.h  utils.h
include/common/: basesocket.hpp  command.h  udpserver.hpp  udpsocket.hpp
include/proto/: realenv.proto
python/: CMakeLists.txt  example.py  motion_example.py  motion_sdk_pybind.cpp
scripts/: visualize_command.py  visualize_csv_data.py  visualize_robot_data.py
src/: command.cpp  dr_timer.cpp  grpc_client.cpp  motion_spline.cpp  motionexample.cpp  receiver.cpp  sender.cpp  utils.cpp
unused/: main copy.cpp  main_spline_version.cpp  main_testmotion.cpp  testexample.cpp  testexample.h
